--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <section id="home">
-    <center></center><div class="container">
+    </center><div class="container">
       <h1>RideXpress</h1>
       <p>RideXpress is a ride-sharing service that offers convenient and affordable land transportation options. We connect passengers with drivers through a mobile app, allowing users to request rides, track their driver's location, and pay for their trips digitally. RideXpress aims to provide a safe, reliable, and hassle-free alternative to traditional taxi services.</p>
     </div>
@@ -69,7 +69,7 @@
         <textarea placeholder="Your Message" required></textarea>
         <button type="submit">Send Message</button>
       </form>
-    </div></center>
+    </div>
   </section>
 
   <footer>
